get all users with filter, pagination
